Create add post component

--- a/src/index.css
+++ b/src/index.css
@@ -17,3 +17,11 @@ code {
   margin-top: 30px !important;
   border-radius: 8px;
 }
+
+#new-post {
+  margin-top: 30px !important;
+}
+
+.new-post-inputs {
+  padding: 20px 0 !important;
+}
