Restructure navbar layout

--- a/src/index.css
+++ b/src/index.css
@@ -28,9 +28,9 @@ button {
 
 /* Navbar */
 
-ul li:last-child {
+/* ul li:last-child {
   margin-bottom: 10px;
-}
+} */
 
 .mobile-theme-btn {
   margin-top: 8px !important;
